# droid-sim-evals

./: .gitignore  README.md  pyproject.toml  replay_h5_traj.py  replay_json_traj.py  save_h5_obs.py  tiptop_eval.py
src/sim_evals/environments/: droid_environment.py
src/sim_evals/inference/: tiptop_websocket.py
